# uacp

./: .gitignore  ADOPTERS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTRIBUTING.md  GOVERNANCE.md  INTEROP.md  LICENSE  NOTICE  README.md  SECURITY.md  package-lock.json  package.json  signing.js  validate.js
conformance/: RUNNER-SPEC.md  registry.json
docs/: ACP-UACP-RELATIONSHIP.md  PREFLIGHT-PUBLIC-2026-05-25.md  RELEASE-NOTES-v0.6.0.md  RESOURCE-LIMITS.md  SCOPE-KEY-ROTATION-U8-SPEC.md  SCOPE-REDUCTION-2026-05-08.md  SIGNING-ED25519-U1-SPEC.md  TECH-STACK.md  UACP-BOUNDARY.md  UACP-PROFILES.md  review-2026-04-27.md
reference-impls/python/: README.md  pyproject.toml
reference-impls/python/tests/: test_extensions.py  test_validator.py
reference-impls/python/uacp/: __init__.py  serializer.py  types.py  validator.py
reference-impls/python/uacp/extensions/: __init__.py  artifacts.py  branching.py  citations.py  reasoning.py
schema/: conversation.schema.json  encrypted-envelope.schema.json  export.schema.json
scripts/: check-readme-version.js  generate-audit-vectors.js  generate-event-payload-vectors.js  generate-identity-chain-vectors.js  generate-member-set-vectors.js  generate-promotion-vectors.js  generate-scope-identifier-vectors.js  generate-sync-event-vectors.js  generate-vector-clock-vectors.js  generate-withdraw-vectors.js  schema-lint.js
test-vectors/: 01-minimal-chat.uacp.json  02-multi-message.uacp.json  03-tool-use.uacp.json  04-multimodal-image.uacp.json  05-branched-conversation.uacp.json  06-with-artifacts.uacp.json  (+57 more)
(+418 files in other folders)
