[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusionlayer-uacp"
version = "0.7.0"
description = "Unified AI Context Protocol — Python reference validator"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pydantic>=2.0"]
